// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-user GET /change/:userType should render the 500 error page when the service user type is not a valid string 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`service-user GET /change/:userType should render the change service user page for an agent 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <input class="govuk-input" id="first-name"
                    name="firstName" type="text" value="Fiona">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <input class="govuk-input" id="last-name"
                    name="lastName" type="text" value="Shell">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="test2@example.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user GET /change/:userType should render the change service user page for an appellant 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update appellant details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">Appellant&#39;s first name</label>
                    <input class="govuk-input" id="first-name"
                    name="firstName" type="text" value="Roger">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Appellant&#39;s last name</label>
                    <input class="govuk-input" id="last-name"
                    name="lastName" type="text" value="Simmons">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Appellant&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Appellant&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="test3@example.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Appellant&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with the expected error message if email is not an email 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#emailAddress">Enter a valid email or clear the email field</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <input class="govuk-input" id="first-name"
                    name="firstName" type="text" value="Jessica">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <input class="govuk-input" id="last-name"
                    name="lastName" type="text" value="Jones">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <p id="email-address-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a valid email or
                        leave empty</p>
                    <input class="govuk-input govuk-input--error" id="email-address"
                    name="emailAddress" type="text" value="jessica.jones" aria-describedby="email-address-error">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with the expected error message if firstName is empty 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#firstName">Enter the first name</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <p id="first-name-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter first name</p>
                    <input                     class="govuk-input govuk-input--error" id="first-name" name="firstName"
                    type="text" aria-describedby="first-name-error">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <input class="govuk-input" id="last-name"
                    name="lastName" type="text" value="Jones">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="null.jones@email.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with the expected error message if firstName is null 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#firstName">Enter the first name</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <p id="first-name-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter first name</p>
                    <input                     class="govuk-input govuk-input--error" id="first-name" name="firstName"
                    type="text" aria-describedby="first-name-error">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <input class="govuk-input" id="last-name"
                    name="lastName" type="text" value="Jones">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="null.jones@email.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with the expected error message if lastName is empty 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#lastName">Enter the last name</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <input class="govuk-input" id="first-name"
                    name="firstName" type="text" value="Jessica">
                </div>
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <p id="last-name-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter last name</p>
                    <input                     class="govuk-input govuk-input--error" id="last-name" name="lastName" type="text"
                    aria-describedby="last-name-error">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="jessica.null@email.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with the expected error message if lastName is undefined 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#lastName">Enter the last name</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <input class="govuk-input" id="first-name"
                    name="firstName" type="text" value="Jessica">
                </div>
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <p id="last-name-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter last name</p>
                    <input                     class="govuk-input govuk-input--error" id="last-name" name="lastName" type="text"
                    aria-describedby="last-name-error">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="jessica.null@email.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with the expected error message if phone number is provided but invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#phoneNumber">Enter a valid phone number or clear the phone number field</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <input class="govuk-input" id="first-name"
                    name="firstName" type="text" value="Jessica">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <input class="govuk-input" id="last-name"
                    name="lastName" type="text" value="Jones">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="jessica.jones@email.com">
                </div>
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <p id="phone-number-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a valid phone number
                        or leave empty</p>
                    <input class="govuk-input govuk-input--error" id="phone-number"
                    name="phoneNumber" type="text" value="00000" aria-describedby="phone-number-error">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with with the expected error message if firstName is undefined 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#firstName">Enter the first name</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <p id="first-name-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter first name</p>
                    <input                     class="govuk-input govuk-input--error" id="first-name" name="firstName"
                    type="text" aria-describedby="first-name-error">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <input class="govuk-input" id="last-name"
                    name="lastName" type="text" value="Jones">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="null.jones@email.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`service-user POST /change/:userType should re-render changeServiceUser with with the expected error message if lastName is null 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#lastName">Enter the last name</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Update agent details</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <label class="govuk-label" for="first-name">Agent&#39;s first name</label>
                    <input class="govuk-input" id="first-name"
                    name="firstName" type="text" value="Jessica">
                </div>
                <div class="govuk-form-group govuk-form-group--error">
                    <label class="govuk-label" for="last-name">Agent&#39;s last name</label>
                    <p id="last-name-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter last name</p>
                    <input                     class="govuk-input govuk-input--error" id="last-name" name="lastName" type="text"
                    aria-describedby="last-name-error">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="organisation-name">Agent&#39;s company or organisation name</label>
                    <input class="govuk-input"
                    id="organisation-name" name="organisationName" type="text">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="email-address">Agent&#39;s email address</label>
                    <input class="govuk-input" id="email-address"
                    name="emailAddress" type="text" value="jessica.null@email.com">
                </div>
                <div class="govuk-form-group">
                    <label class="govuk-label" for="phone-number">Agent&#39;s phone number</label>
                    <input class="govuk-input" id="phone-number"
                    name="phoneNumber" type="text">
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
